// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CheckBoxIconText when checked 1`] = `
<View
  accessibilityLabel=" CheckBoxIconText, , "
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomLeftRadius": 2,
      "borderTopLeftRadius": 2,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    importantForAccessibility="yes"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#999",
          "fontSize": 30,
        },
        Object {
          "backgroundColor": "#fff",
          "borderColor": "#e26901",
          "borderRadius": 2,
          "borderWidth": 1,
          "color": "#e26901",
          "fontSize": 28,
          "overflow": "hidden",
          "padding": 1.4000000000000001,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": "telldusicons",
        },
      ]
    }
  >
    checkmark
  </Text>
  <Text
    allowFontScaling={false}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#fff",
          "fontFamily": "Roboto-Light",
          "fontSize": 26,
          "marginLeft": 15.4,
        },
        undefined,
      ]
    }
  >
    CheckBoxIconText
  </Text>
</View>
`;

exports[`renders CheckBoxIconText when unchecked 1`] = `
<View
  accessibilityLabel=" CheckBoxIconText, , "
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomLeftRadius": 2,
      "borderTopLeftRadius": 2,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    importantForAccessibility="yes"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#999",
          "fontSize": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#fff",
          "borderRadius": 2,
          "borderWidth": 1,
          "color": "transparent",
          "fontSize": 28,
          "overflow": "hidden",
          "padding": 1.4000000000000001,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": "telldusicons",
        },
      ]
    }
  >
    checkmark
  </Text>
  <Text
    allowFontScaling={false}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#fff",
          "fontFamily": "Roboto-Light",
          "fontSize": 26,
          "marginLeft": 15.4,
        },
        undefined,
      ]
    }
  >
    CheckBoxIconText
  </Text>
</View>
`;
